--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,9 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
+
+.line-clamp-4 {
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
